--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain-groq>=0.3.2",
     "langchain-ollama>=0.3.2",
     "langchain-openai>=0.3.12",
+    "langchain-tavily>=0.1.6",
     "langgraph>=0.3.28",
     "langgraph-cli>=0.2.2",
     "langgraph-prebuilt>=0.1.8",
